changed the button value of universal constants

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         </div>
         <div class="row">
-            <button class="button operations" value="*3.14">π</button>
+            <button class="button operations" value="3.14">π</button>
             <button class="button operations">(</button>
             <button class="button operations">)</button>
-            <button class="button operations" value="*2.7182818284590">e</button>
+            <button class="button operations" value="2.7182818284590">e</button>
         </div>
         <div class="row">
             <button class="button operations">clr</button>
-            <button class="button operations" value="*0.01">%</button>
+            <button class="button operations" value="0.01">%</button>
             <button class="button operations">&#8617</button>
             <button class="button operations" value="/">÷</button>
         </div>
